# stepsquad

./: .gitignore  ADD_DNS_RECORDS_GODADDY.md  ADK_IMPLEMENTATION.md  ALIGN_DEV_PROD_ENV.md  ALL_OPTIONS_COMPLETE.md  ARCHITECTURE.md  ARTIFACT_REGISTRY_SETUP.md  CICD_TROUBLESHOOTING.md  COMMIT_MESSAGE.txt  COMMIT_MESSAGE_E2E_FIX.txt  COMMIT_SUMMARY.md  CURRENT_STATUS_REPORT.md  CUSTOM_DOMAIN_SETUP.md  DEBUG_LOCAL_401.md  DEPLOYMENT_METHODS.md  DEV_VS_PRODUCTION_ENV.md  DNS_RECORDS.txt  DOMAIN_MAPPING_CLICK_BY_CLICK.md  DOMAIN_SETUP_GUIDE.md  DOMAIN_VERIFICATION_SETUP.md  FIND_VERIFICATION_STRING.md  FIREBASE_401_DEBUGGING.md  FIREBASE_CI_CD_SETUP.md  FIREBASE_COMPLETE.md  FIREBASE_CONFIG_COMPLETE.md  FIREBASE_IMPLEMENTATION.md  FIREBASE_IMPLEMENTATION_STATUS.md  FIREBASE_NEXT_STEPS.md  FIREBASE_SETUP.md  FIREBASE_SETUP_GUIDE.md  FIREBASE_TEST_RESULTS.md  FIREBASE_TOKEN_VERIFICATION_FIX.md  FITBIT_CONFIGURATION_COMPLETE.md  FITBIT_INTEGRATION_CHECKLIST.md  FITBIT_LOCALHOST_REDIRECT.md  FITBIT_SCOPE_SELECTION.md  GARMIN_APP_SETUP.md  GARMIN_REGISTRATION_DESCRIPTION.md  GARMIN_RESPONSE.md  GODADDY_DNS_SETUP.md  (+45 more)
apps/agents/: DEPLOYMENT_FIX.md  Dockerfile  README.md  TEST_RESULTS.md  agents.py  agents_storage.py  gcp_clients.py  main.py  pyproject.toml  test_agents.py  tools.py
apps/api/: .env.example  .gitignore  Dockerfile  README.md  conftest.py  device_storage.py  env.local.example  firebase_auth.py  fitbit_client.py  garmin_client.py  gcp_clients.py  main.py  pubsub_bus.py  pyproject.toml  storage.py
apps/api/scripts/: check_firebase_setup.py  seed_demo_data.py  (+2 more)
(+87 files in other folders)
