[project]
name = "stepsquad-api"
version = "0.4.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-dateutil>=2.9.0.post0",
  "firebase-admin>=6.4.0",
  "google-cloud-firestore>=2.16.0",
  "google-cloud-bigquery>=3.25.0",
  "google-cloud-pubsub>=2.21.0",
  "requests>=2.32.3",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "httpx>=0.27.0",
]